# route-platform

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  configure  configure.ac  make-setup  rt-service.sh  service.sh  update-autotools
babeld/: Makefile.in
bgpd/: Makefile.in
doc/: Makefile.in  quagga.info  quagga.info-1  quagga.info-2  version.texi
fpm/: Makefile.am  fpm_handle.c  fpm_main.c  fpm_socket.c  fpm_socket.h
frpd/: EigrpCmd.c  EigrpDual.c  EigrpInit.c  EigrpIntf.c  EigrpIp.c  EigrpMain.c  EigrpPacket.c  EigrpSnmp.c  EigrpSysPort.c  EigrpSysPortRouterSnmp.c  EigrpUtil.c  EigrpZebra.c  Eigrpd.c  Makefile.am
frpd/include/: EigrpCmd.h  EigrpDef.h  EigrpDual.h  EigrpIntf.h  EigrpIp.h  EigrpMain.h  EigrpPacket.h  EigrpPreDefine.h  EigrpSnmp.h  EigrpSysPort.h  EigrpSysPortRouterSnmp.h  EigrpUtil.h  EigrpZebra.h  Eigrpd.h
imi-cli/: Makefile  Makefile.am  Makefile.in  extract.pl.in  imi-sh.c  imi-sh.conf.sample  imi-sh.h  imi-sh_client.c  imi-sh_cmd.c  imi-sh_config.c  imi-sh_kernel.c  imi-sh_kernel.h  imi-sh_log.c  imi-sh_log.h  imi-sh_main.c
isisd/: Makefile.in
isisd/topology/: Makefile.in
ldpd/: Makefile.am  Makefile.in  connect_daemon.c  connect_daemon.h  impl_fib.c  ldp.c  ldp.h  ldp_main.c  ldp_zebra.c
lib/: Makefile.in  command.c  command.h  log.c  log.h  memtypes.c  memtypes.h  route_types.h  route_types.txt  version.h  version.h.in  vty.c  vty.h  zebra.h
lldpd/: Makefile.am  lldp-socket.c  lldp-socket.h  lldp_db.c  lldp_db.h  lldp_interface.c  lldp_interface.h  lldp_main.c  lldp_neighbor.c  lldp_neighbor.h  lldp_packet.c  lldp_packet.h  lldp_read.c  lldp_write.c  lldp_zebra.c  lldpd.c  lldpd.h
m4/: Makefile.in
mplsd/: Makefile.am
olsrd/: Makefile  Makefile.am  Makefile.in  README  olsr_debug.c  olsr_debug.h  olsr_dup.c  olsr_dup.h  olsr_interface.c  olsr_interface.h  olsr_linkset.c  olsr_linkset.h  olsr_main.c  olsr_mpr.c  olsr_mpr.h  olsr_neigh.c  olsr_neigh.h  olsr_packet.c  olsr_packet.h  olsr_route.c  olsr_route.h  olsr_time.c  olsr_time.h  olsr_vty.c  olsr_vty.h  olsr_zebra.c  olsr_zebra.h  olsrd.8  olsrd.c  olsrd.conf.sample  olsrd.h  olsrd_version.h  readme.html
ospf6d/: Makefile.in
ospfclient/: Makefile.in
ospfd/: Makefile.am  Makefile.in  ospf_dcn.c  ospf_dcn.h  ospf_dump.c  ospf_interface.c  ospf_opaque.c  ospf_opaque.h  ospf_packet.c  ospf_zebra.c
pimd/: Makefile.in
pkgsrc/: Makefile.in
redhat/: Makefile.in  quagga.spec
ripd/: Makefile.in
ripngd/: Makefile.in
rsvpd/: Makefile.am  Makefile.in  jhash.c  jhash.h  label_map.c  label_map.h  labelmgr.c  labelmgr.h  lsp.h  mpls_xc.c  mpls_xc.h  rsvp_if.c  rsvp_if.h  rsvp_labelmgr.h  rsvp_lsp.c  rsvp_lsp.h  rsvp_lsp_fsm.h  rsvp_main.c  rsvp_network.c  rsvp_network.h  rsvp_obj.c  rsvp_obj.h  rsvp_packet.c  rsvp_packet.h  rsvp_route.c  rsvp_route.h  rsvp_rtable.c  rsvp_softstatecb.h  rsvp_state.c  rsvp_state.h  rsvp_tunnel.c  rsvp_tunnel.h  rsvp_vty.c  rsvp_vty.h  rsvp_zebra.c  rsvp_zebra.h  rsvpd.c  rsvpd.conf  rsvpd.h  ternary.c  (+1 more)
solaris/: Makefile.in
system-utils/: Makefile  Makefile.am  Makefile.in  ip_brctl.c  ip_brctl.h  ip_dhcp.c  ip_firewall.c  ip_iptables.c  ip_tunnel.c  ip_tunnel.h  ip_vlan.c  ip_vlan.h  main.c  sntpcLib.c  sntpcLib.h  utils.c  utils.h  utils_interface.c  utils_interface.h  utils_zebra.c
tests/: Makefile.in  test-commands-defun.c
tests/bgpd.tests/: Makefile.in
tests/libzebra.tests/: Makefile.in
vpnd/: Makefile  Makefile.am  Makefile.in  ip_tunnel.c  main.c  vpn_zebra.c  vpnd
vpnd/l2tp/: Makefile  Makefile.am  Makefile.in  xl2tpd-control.c
vrrpd/: Makefile.am  zvrrp_if.c  zvrrp_if.h  zvrrp_packet.c  zvrrp_packet.h  zvrrp_sched.c  zvrrp_sched.h  zvrrp_zebra.c  zvrrp_zebra.h  zvrrpd.c  zvrrpd.h  zvrrpd_main.c
vtysh/: Makefile.in  vtysh_cmd.c
watchquagga/: Makefile.in  watchquagga.c
zebra/: Makefile.in  interface.c  zebra_rib.c  zebra_vty.c  zserv.c  zserv.h
